# mssql-example

./: .env.example  .gitignore  README.md  pyproject.toml  sql_example.py  sql_example_sopra.py
sql/: show_schema.sql
