[project]
name = "mssql-example"
version = "0.1.0"
description = "Minimal runnable example for connecting to Microsoft SQL Server with Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "sqlalchemy>=2.0.49",
    "python-dotenv>=1.2.2",
    "pyodbc>=5.3.0",
]